made the navbar

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./output.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
   </head>
-  <body>
-    <nav></nav>
+  <body class="bg-black">
+    <nav class="flex bg-[url('/public/img/paw-pattern1.svg')] bg-white flex-row justify-between m-5 px-10 py-4 rounded-full overflow-hidden relative">
+      <img src="/public/img/logo.svg" alt="" class="z-10" />
+      <ul class="flex flex-row items-center gap-8 z-10 text-sky-900 font-['Barlow'] font-semibold">
+        <li>
+          <a href="#">Tentang Kami</a>
+        </li>
+        <li>
+          <a href="#"> Klinik</a>
+        </li>
+        <li>
+          <a href="#">Daycare & Grooming</a>
+        </li>
+        <li>
+          <a href="#">Adopsi</a>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
