--- a/src/index.html
+++ b/src/index.html
@@ -9,39 +9,71 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
   </head>
   <body class="bg-light">
-    <nav class="flex bg-[url('/public/img/paw-pattern-light.png')] bg-white flex-row justify-between m-5 px-10 py-4 rounded-full overflow-hidden relative">
+    <nav class="flex bg-[url('/public/img/paw-pattern-light.png')] bg-white flex-row justify-between my-5 px-10 py-4 rounded-full overflow-hidden top-0 fixed w-full z-50">
       <a href="#">
-        <img src="/public/img/logo.svg" alt="" class="z-10" />
+        <img src="/public/img/logo.svg" alt="" class="z-10 flex items-center" />
       </a>
-      <ul class="flex flex-row items-center gap-8 z-10 text-sky-900 font-['Barlow'] font-semibold invisible md:visible">
-        <li>
-          <a href="#">Tentang Kami</a>
-        </li>
-        <li>
-          <a href="#"> Klinik</a>
-        </li>
-        <li>
-          <a href="#">Daycare & Grooming</a>
-        </li>
-        <li>
-          <a href="#">Adopsi</a>
-        </li>
+      <ul class="flex flex-row items-center gap-8 z-10 text-sky-900 font-['Barlow'] font-semibold visible md:invisible">
+        <ul class="flex flex-row items-center gap-8 z-10 text-sky-900 font-['Barlow'] font-semibold invisible md:visible">
+          <li>
+            <a href="#">Tentang Kami</a>
+          </li>
+          <li>
+            <a href="#">Klinik</a>
+          </li>
+          <li>
+            <a href="#">Daycare & Grooming</a>
+          </li>
+          <li>
+            <a href="#">Adopsi</a>
+          </li>
+        </ul>
+        <div class="my-auto cursor-pointer space-y-1 md:hidden" id="hamburger">
+          <div class="h-1 w-10 bg-dark"></div>
+          <div class="h-1 w-10 bg-dark"></div>
+          <div class="h-1 w-10 bg-dark"></div>
+        </div>
       </ul>
     </nav>
-    <main>
-      <div class="flex flex-col-reverse md:flex-row justify-center m-8 gap-[0.63rem] px-0 lg:px-64 ">
-        <div id="left" class="flex flex-col flex-1 h-96 gap-5 font-['Barlow'] bg-white text-dark">
+    <ul class="sticky top-[70px] z-50 hidden border-t-2 border-white py-2 text-end md:hidden" id="hamburgerList">
+      <li class="hamburgerList"><a href="#">Home</a></li>
+      <li class="hamburgerList"><a href="#">About</a></li>
+      <li class="hamburgerList"><a href="#">Projects</a></li>
+      <li class="hamburgerList"><a href="#">Contact</a></li>
+    </ul>
+    <section class="my-32">
+      <div class="flex flex-col-reverse md:flex-row justify-center m-8 gap-[0.63rem] px-0 lg:px-64">
+        <div id="left" class="flex flex-col justify-center flex-1 h-[800px] gap-5 font-['Barlow'] text-dark">
           <h1 class="text-[40px] md:text-[56px] md:leading-[67px] text-pretty font-semibold">Professional, Loving and Reliable Cat Care When You Can’t be There</h1>
           <p class="text-xl font-normal text-pretty">
             Di Joy Cat, kami berkomitmen untuk memberikan perawatan terbaik bagi kucing kesayangan Anda. Kami menawarkan berbagai layanan yang dirancang khusus untuk memastikan kesehatan dan kebahagiaan kucing Anda. Dari klinik kucing hingga daycare dan grooming, serta program adopsi, Joy Cat adalah
             pilihan tepat bagi para pemilik kucing yang peduli.
           </p>
-          <img src="/public/img/CatPaw.svg" alt="" class="size-52" />
+          <img src="/public/img/CatPaw.svg" alt="" class="size-32 md:size-52" />
         </div>
-        <div id="right" class="bg-black flex flex-col flex-1 h-96 text-white">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aliquid possimus voluptate est velit modi minus fugit expedita sapiente deserunt.</p>
+        <div id="right" class="flex flex-col flex-1 h-96">
+          <div class="w-[200px] h-[200px] border-[10px] rounded-full border-green bg-[url('/public/img/hero-home-3.jpg')] bg-cover bg-center z-40 absolute translate-y-10" alt=""></div>
+          <div class="bg-[url('/public/img/hero-home-1.jpg')] w-[543px] h-[748px] bg-cover bg-center border-[10px] border-white rounded-t-full z-30 absolute translate-x-10"></div>
+          <div class="bg-[url('/public/img/hero-home-2.jpg')] w-[240px] h-[356px] bg-cover bg-center border-[10px] rounded-[200px] -scale-x-100 border-Fuschia z-30 absolute translate-y-[500px] translate-x-[420px]"></div>
         </div>
       </div>
-    </main>
+    </section>
+    <section class="">
+      <div class="bg-greenish flex flex-col justify-center items-center py-32">
+        <h2 class="text-dark font-['Barlow'] font-black text-[64px]">Our Services</h2>
+        <div class="flex flex-row justify-center items-center gap-8 py-10">
+          <div class="flex flex-col w-4/12 p-4 rounded-[18px] bg-white">
+            <img src="/public/img/service-klinik.jpeg" class="w-[560px] h-[326px] object-cover overflow-hidden rounded-[8px]" alt="" />
+          </div>
+          <div class="flex flex-col w-4/12 p-4 rounded-[18px] bg-white">
+            <img src="/public/img/service-daycare.webp" class="w-[560px] h-[326px] object-cover overflow-hidden rounded-[8px]" alt="" />
+          </div>
+          <div class="flex flex-col w-4/12 p-4 rounded-[18px] bg-white">
+            <img src="/public/img/service-adopsi.jpeg" class="w-[560px] h-[326px] object-cover overflow-hidden rounded-[8px]" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="script.js"></script>
   </body>
 </html>
