fixed button and some margin?

--- a/src/index.html
+++ b/src/index.html
@@ -59,26 +59,26 @@
       </div>
     </section>
     <section class="">
-      <div class="bg-greenish flex flex-col justify-center items-center py-32">
+      <div class="bg-greenish flex flex-col justify-center items-center pt-32 pb-16">
         <h2 class="text-dark font-['Barlow'] font-black text-[64px]">Our Services</h2>
         <div class="flex flex-row justify-center items-center gap-8 scale-95 py-10">
           <div class="flex flex-col w-4/12 p-4 rounded-[18px] bg-white text-dark">
             <img src="/public/img/service-klinik.jpeg" class="w-[560px] h-[326px] object-cover overflow-hidden rounded-[8px]" alt="" />
             <h3 class="font-['Barlow'] font-semibold text-[32px] py-4 text-pretty">Klinik Kucing</h3>
             <p class="font-['Barlow'] font-normal text-xl text-pretty">Tim dokter hewan kami yang berpengalaman siap memberikan perawatan medis terbaik untuk kucing Anda. Kami menyediakan layanan vaksinasi, pemeriksaan rutin, pengobatan penyakit, dan konsultasi kesehatan.</p>
-            <button class="bg-green text-white font-['Barlow'] text-2xl font-semibold p-6 rounded-full mt-[68px]">Cek Dokter</button>
+            <a href="#" class="bg-green text-white font-['Barlow'] text-2xl font-semibold p-6 rounded-full justify-center flex mt-[68px]">Cek Dokter</a>
           </div>
           <div class="flex flex-col w-4/12 p-4 rounded-[18px] bg-white text-dark">
             <img src="/public/img/service-daycare.webp" class="w-[560px] h-[326px] object-cover overflow-hidden rounded-[8px]" alt="" />
             <h3 class="font-['Barlow'] font-semibold text-[32px] py-4 text-pretty">Daycare & Grooming</h3>
             <p class="font-['Barlow'] font-normal text-xl text-pretty">Butuh tempat yang aman dan nyaman untuk menitipkan kucing Anda saat Anda sibuk? Daycare kami adalah solusinya. Selain itu, layanan grooming kami akan membuat kucing Anda tetap bersih dan cantik.</p>
-            <button class="bg-green text-white font-['Barlow'] text-2xl font-semibold p-6 rounded-full mt-[68px]">Lihat Paket</button>
+            <a href="#" class="bg-green text-white font-['Barlow'] text-2xl font-semibold p-6 rounded-full justify-center flex mt-[68px]">Lihat Paket</a>
           </div>
           <div class="flex flex-col w-4/12 p-4 rounded-[18px] bg-white text-dark">
             <img src="/public/img/service-adopsi.jpeg" class="w-[560px] h-[326px] object-cover overflow-hidden rounded-[8px]" alt="" />
             <h3 class="font-['Barlow'] font-semibold text-[32px] py-4 text-pretty">Adopsi Kucing</h3>
             <p class="font-['Barlow'] font-normal text-xl text-pretty">Bantu kami menemukan rumah baru yang penuh cinta untuk kucing-kucing yang membutuhkan. Lihat kucing-kucing yang siap diadopsi dan jadilah bagian dari cerita bahagia mereka.</p>
-            <button class="bg-green text-white font-['Barlow'] text-2xl font-semibold p-6 rounded-full mt-[68px]">Cari Kucing</button>
+            <a href="#" class="bg-green text-white font-['Barlow'] text-2xl font-semibold p-6 rounded-full justify-center flex mt-[68px]">Cari Kucing</a>
           </div>
         </div>
       </div>
