changed to col when small

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
   </head>
   <body class="bg-light font-['Barlow']">
-    <nav class="flex scale-95 bg-[url('/public/img/paw-pattern-light.png')] bg-white flex-row justify-between my-5 px-10 py-4 rounded-full overflow-hidden top-0 fixed w-full z-50 drop-shadow-[0_6px_18px_rgba(0,0,0,5%)] overflow-hidden">
+    <nav class="flex mx-auto scale-95 bg-[url('/public/img/paw-pattern-light.png')] bg-white flex-row justify-between my-5 px-10 py-4 rounded-full overflow-hidden top-0 fixed w-full z-50 drop-shadow-[0_6px_18px_rgba(0,0,0,5%)]">
       <a href="#">
         <img src="/public/img/logo.svg" alt="" class="z-10 flex items-center" />
       </a>
@@ -42,8 +42,8 @@
       <li class="hamburgerList"><a href="#">Contact</a></li>
     </ul>
     <section class="my-32">
-      <div class="flex flex-col-reverse md:flex-row justify-center m-8 gap-[0.63rem] px-0 lg:px-64">
-        <div id="left" class="flex flex-col justify-center flex-1 h-[800px] gap-5 text-dark">
+      <div class="flex flex-col-reverse md:flex-row justify-center m-8 gap-[0.63rem] px-0 lg:px-64 bg-blue-600">
+        <div id="left" class="flex flex-col justify-center flex-1 h-[800px] gap-5 text-dark bg-red-600 scale-90 md:scale-75 lg:scale-90 xl:scale-100">
           <h1 class="text-[40px] md:text-[56px] md:leading-[67px] text-pretty font-semibold">Professional, Loving and Reliable Cat Care When You Can’t be There</h1>
           <p class="text-xl font-normal text-pretty">
             Di Joy Cat, kami berkomitmen untuk memberikan perawatan terbaik bagi kucing kesayangan Anda. Kami menawarkan berbagai layanan yang dirancang khusus untuk memastikan kesehatan dan kebahagiaan kucing Anda. Dari klinik kucing hingga daycare dan grooming, serta program adopsi, Joy Cat adalah
@@ -51,7 +51,7 @@
           </p>
           <img src="/public/img/CatPaw.svg" alt="" class="size-32 md:size-52" />
         </div>
-        <div id="right" class="flex flex-col flex-1 h-96">
+        <div id="right" class="flex flex-col flex-1 h-96 scale-75 md:scale-100 bg-black">
           <div class="w-[200px] h-[200px] border-[10px] rounded-full border-green bg-[url('/public/img/hero-home-3.jpg')] bg-cover bg-center z-40 absolute translate-y-10" alt=""></div>
           <div class="bg-[url('/public/img/hero-home-1.jpg')] w-[543px] h-[748px] bg-cover bg-center border-[10px] border-white rounded-t-full z-30 absolute translate-x-10"></div>
           <div class="bg-[url('/public/img/hero-home-2.jpg')] w-[240px] h-[356px] bg-cover bg-center border-[10px] rounded-[200px] -scale-x-100 border-Fuschia z-30 absolute translate-y-[500px] translate-x-[420px]"></div>
@@ -61,7 +61,7 @@
     <section class="">
       <div class="bg-greenish flex flex-col justify-center items-center pt-32 pb-16">
         <h2 class="text-dark font-black text-[64px]">Our Services</h2>
-        <div class="flex flex-row justify-center items-center gap-8 scale-95 py-10">
+        <div class="flex flex-col md:flex-row justify-center items-center gap-8 scale-95 py-10">
           <div class="flex flex-col w-4/12 h-[700px] p-4 rounded-[18px] bg-white text-dark">
             <img src="/public/img/service-klinik.jpeg" class="w-[560px] h-[326px] object-cover overflow-hidden rounded-[8px]" alt="" />
             <h3 class="font-semibold text-[32px] py-4 text-pretty">Klinik Kucing</h3>
