--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
       <ul class="flex flex-row items-center gap-8 z-10 text-sky-900 font-semibold visible md:invisible">
         <ul class="flex flex-row items-center gap-8 z-10 text-sky-900 font-semibold invisible md:visible">
           <li>
-            <a href="/src/page2/index.html">Tentang Kami</a>
+            <a href="/src/ttg/index.html">Tentang Kami</a>
           </li>
           <li>
             <a href="#">Klinik</a>
