fixed some transform

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
     </ul>
     <section class="my-32">
       <div class="flex flex-col-reverse md:flex-row justify-center gap-[42rem] md:gap-[0.63rem] px-0 lg:px-64">
-        <div id="left" class="flex flex-col justify-center flex-1 h-[800px] gap-5 text-dark scale-90 md:scale-75 lg:scale-90 xl:scale-100">
+        <div id="left" class="flex flex-col justify-center flex-1 h-[800px] gap-5 text-dark scale-90 md:scale-75 lg:scale-90 xl:scale-100 pe-10">
           <h1 class="text-[40px] md:text-[56px] md:leading-[67px] text-pretty font-semibold">Professional, Loving and Reliable Cat Care When You Can’t be There</h1>
           <p class="text-xl font-normal text-pretty">
             Di Joy Cat, kami berkomitmen untuk memberikan perawatan terbaik bagi kucing kesayangan Anda. Kami menawarkan berbagai layanan yang dirancang khusus untuk memastikan kesehatan dan kebahagiaan kucing Anda. Dari klinik kucing hingga daycare dan grooming, serta program adopsi, Joy Cat adalah
@@ -92,11 +92,16 @@
           </p>
           <img src="/public/img/CatPaw.svg" alt="" class="size-32 md:size-52" />
         </div>
-        <div id="right" class="flex flex-col flex-1 w-fit h-[700px] scale-75 md:scale-100 relative">
+        <div class="flex-1 flex relative bg-red-500 justify-center md:scale-75 lg:scale-90 xl:scale-95 2xl:scale-100">
+          <img src="/public/img/hero-home-3.jpg" class="object-cover absolute size-[200px] rounded-full border-green border-[10px] z-20 right-[65%] top-[5%]" alt="" />
+          <img src="/public/img/hero-home-2.jpg" class="object-cover absolute z-10 transform scale-x-[-1] w-[240px] h-[360px] rounded-[200px] border-[10px] border-Fuschia left-[65%] bottom-[-10%]" alt="" />
+          <img src="/public/img/hero-home-1.jpg" class="object-cover rounded-t-full z-0 h-[750px] w-[543px] border-[10px] border-white" alt="" />
+        </div>
+        <!-- <div id="right" class="flex flex-col flex-1 w-fit h-[700px] scale-75 md:scale-100 relative">
           <div class="w-[200px] h-[200px] border-[10px] rounded-full border-green bg-[url('/public/img/hero-home-3.jpg')] bg-cover bg-center z-40 absolute translate-y-10" alt=""></div>
           <div class="bg-[url('/public/img/hero-home-1.jpg')] w-[543px] h-[748px] bg-cover bg-center border-[10px] border-white rounded-t-full z-30 absolute translate-x-10"></div>
           <div class="bg-[url('/public/img/hero-home-2.jpg')] w-[240px] h-[356px] bg-cover bg-center border-[10px] rounded-[200px] -scale-x-100 border-Fuschia z-30 absolute translate-y-[500px] translate-x-[420px]"></div>
-        </div>
+        </div> -->
       </div>
     </section>
     <section class="">
