--- a/src/tentang.html
+++ b/src/tentang.html
@@ -3,41 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tailwind CSS Modal</title>
     <link href="./output.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
   </head>
-  <body class="bg-gray-200 flex items-center justify-center h-screen">
-    <!-- Modal Background -->
-    <div id="modal-background" class="fixed inset-0 bg-gray-900 bg-opacity-50 hidden">
-      <!-- Modal Container -->
-      <div class="flex items-center justify-center min-h-screen">
-        <!-- Modal -->
-        <div id="modal" class="bg-white rounded-lg shadow-lg p-8 m-4 max-w-xs max-h-full text-center">
-          <h2 class="text-2xl font-bold mb-4">Modal Title</h2>
-          <p class="text-gray-700 mb-4">This is a simple modal using Tailwind CSS.</p>
-          <button id="close-modal" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Close</button>
+  <body class="font-['Barlow']">
+    <section id="big-cat-pic" class="bg-[url('/public/img/hero-tentang-kami.jpg')] bg-cover bg-center w-full h-[300px] md:h-[600px]"></section>
+    <main>
+      <section class="ttg bg-light text-dark text-[64px] py-32">
+        <div class="flex flex-col lg:flex-row gap-10 justify-center container px-10 lg:px-20 mx-auto">
+          <div class="flex flex-col lg:flex-row gap-[10px] flex-1">
+            <h1 class="font-black">
+              Tentang <br />
+              Kami
+            </h1>
+            <img src="/public/img/CatPaw(1).svg" class="size-52" alt="" />
+          </div>
+          <div class="flex-1">
+            <p class="text-lg lg:text-xl text-black">
+              Joy Cat didirikan oleh kakak beradik, dr. Bima Sakti Gemilang dan dr. Andromeda Gemilang. Datang dari keluarga pecinta kucing dan sempat memelihara hampir dari 100 ekor kucing, kami memahami bahwa kucing bukan hanya sekadar hewan peliharaan, tetapi juga anggota keluarga yang berharga.
+              Oleh karena itu, kami bertekad untuk menyediakan layanan yang mendukung kesehatan dan kebahagiaan bagi kucing dan para pemiliknya.
+            </p>
+          </div>
         </div>
-      </div>
-    </div>
-
-    <!-- Button to Open Modal -->
-    <button id="open-modal" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Open Modal</button>
-
-    <!-- JavaScript to handle modal functionality -->
-    <script>
-      document.getElementById("open-modal").addEventListener("click", function () {
-        document.getElementById("modal-background").classList.remove("hidden");
-      });
-
-      document.getElementById("close-modal").addEventListener("click", function () {
-        document.getElementById("modal-background").classList.add("hidden");
-      });
-
-      document.getElementById("modal-background").addEventListener("click", function (event) {
-        if (event.target === this) {
-          this.classList.add("hidden");
-        }
-      });
-    </script>
+        <div class="container flex flex-col px-10 lg:px-20 mx-auto py-32">
+          <h2 class="font-bold text-[40px]">The Cat Doctors</h2>
+          <div class="flex flex-col lg:flex-row"></div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
